--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,6 @@ monthly_forward_rates.csv
 optimal_weights.csv
 hedge_weights.csv
 alpha_weights.csv
+alpha_weights.csv
+hedge_weights.csv
+optimal_weights.csv
